# mcp-code-search

./: .gitignore  LICENSE  PROJECT_SCOPE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
analyzers/: __init__.py  base.py  javascript_analyzer.py  loader.py  python_analyzer.py  tree_sitter.py
analyzers/extractors/: __init__.py  base.py  javascript.py  python.py
chunkers/: __init__.py  base.py  code.py
db/: __init__.py  connection.py  models.py
db/vectorstore/: __init__.py  base.py  file_summaries.py  sqlite.py
embedders/: __init__.py  base.py  local.py
index/: __init__.py  delta.py  gitignore.py  manager.py  worker.py
settings/: __init__.py  config.py
summarizers/: __init__.py  base.py  ministral.py  simple.py
tools/: __init__.py  find_callees.py  find_callers.py  get_dependency_tree.py  get_indexing_status.py  is_file_indexed.py  search_codebase.py  search_files.py
