[project]
name = "mcp-code-search"
version = "0.1.0"
description = "MCP server for semantic code search using vector embeddings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "mcp[cli]>=1.25.0",
    "pathspec>=0.12.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "sqlite-vec>=0.1.6",
]
