[project]
name = "mcp-code-search"
version = "0.1.0"
description = "MCP server for semantic code search with AST intelligence and vector embeddings"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
    {name = "Elon Salfati", email = "elon@salfatigroup.com"}
]
keywords = ["mcp", "code-search", "vector-search", "ast", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "accelerate>=1.12.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "mcp[cli]>=1.25.0",
    "mistral-common>=1.8.8",
    "pathspec>=0.12.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "sqlite-vec>=0.1.6",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/salfatigroup/mcp-code-search"
Repository = "https://github.com/salfatigroup/mcp-code-search"
Issues = "https://github.com/salfatigroup/mcp-code-search/issues"

[tool.setuptools]
packages = [
    "settings",
    "embedders",
    "chunkers",
    "db",
    "db.vectorstore",
    "index",
    "analyzers",
    "analyzers.extractors",
    "summarizers",
    "tools"
]

[tool.setuptools.package-data]
"*" = ["py.typed"]
